# glas

./: .gitignore  LICENSE.txt  README.md  environment.yml
baseline/: matlab
baseline/avo/: CMakeLists.txt  main.cpp  visualize.py
baseline/centralized-planner/: README.md  discretePlanning.sh  discretePostProcessing.py  discretePreProcessing.py  export.sh  exportTrajectories.py  genRandomMAPF.py  plotDiscreteSchedule.py  plotRoadmap.py  run.py  run.sh  runAll.py  runAllAvo.py  runAllOrca.py  stats.py  uav_trajectory.py
baseline/centralized-planner/config/: roadmapConfigTypeGround.yaml  types.yaml
baseline/centralized-planner/discrete/: CMakeLists.txt  README.md
baseline/centralized-planner/discrete/annotateRoadmap/: CMakeLists.txt
baseline/centralized-planner/discrete/annotateRoadmap/src/: ConflictCylinder.h  StopWatch.hpp  convex_collision.cpp  convex_collision.h  cylinderAnnotation.cpp  cylinderAnnotation.h  cylinder_test.cpp  main.cpp  segDist.cpp
baseline/centralized-planner/discrete/annotateRoadmap/test/: 2types.yaml  out.yaml  rm1.yaml
baseline/centralized-planner/discrete/ecbsCLI/: .gitignore  CMakeLists.txt
baseline/centralized-planner/discrete/ecbsCLI/src/: main.cpp
baseline/centralized-planner/discrete/generateRoadmap/: CMakeLists.txt
baseline/centralized-planner/discrete/generateRoadmap/src/: NanoFlannSearchgraphAdaptor.h  fclHelper.cpp  fclHelper.h  fclMotionValidator.hpp  fclStateValidityChecker.hpp  main.cpp  mainOMPL.cpp
baseline/centralized-planner/discrete/libCommon/: CMakeLists.txt
baseline/centralized-planner/discrete/libCommon/include/libCommon/: AgentsLoaderYaml.h  HelperPropertyTree.hpp  Timer.hpp  common.h  map.h  searchgraph.h
baseline/centralized-planner/discrete/libCommon/src/: AgentsLoaderYaml.cpp  map.cpp  searchgraph.cpp
baseline/centralized-planner/discrete/libEcbs/: CMakeLists.txt
baseline/centralized-planner/discrete/libEcbs/include/libEcbs/: ecbs.h
baseline/centralized-planner/discrete/libEcbs/src/: compute_heuristic.cpp  compute_heuristic.h  ecbs.cpp  ecbs_node.cpp  ecbs_node.h  ecbs_search.cpp  ecbs_search.h  node.cpp  node.h  single_agent_ecbs.cpp  single_agent_ecbs.h
baseline/centralized-planner/examples/: empty-8-8-random-10_30_agents.yaml  empty-8-8-random-1_20_agents.yaml  empty-8-8-random-1_30_agents.yaml  empty-8-8-random-2_30_agents.yaml  empty-8-8-random-3_30_agents.yaml  empty-8-8-random-4_30_agents.yaml  empty-8-8-random-5_30_agents.yaml  empty-8-8-random-6_30_agents.yaml  empty-8-8-random-7_30_agents.yaml  empty-8-8-random-8_30_agents.yaml  empty-8-8-random-9_30_agents.yaml
baseline/cfsim/: Makefile  cffirmware.i
baseline/orca/: CMakeLists.txt  README.md  orca.cpp  orca.py  run_orca.py
code/: barrier_fncs.py  environment.yml  genRandomInstanceDict.py  index.py  other_policy.py  plotter.py  sim.py  train_il.py  utilities.py
code/examples/: dataset_stats.py  genObstaclePrimitives.py  param.py  run.py  run_doubleintegrator.py  run_singleintegrator.py  test_vector_plot.py
code/learning/: barrier_net.py  consensus_net.py  ddpg.py  deepset.py  empty_net.py  feedforward.py  nl_el_net.py  pid_net.py  pid_wref_net.py  ppo.py  ppo_c.py  ppo_v2.py  ppo_w_deepset.py  ref_net.py
code/planning/: rrt.py  scp.py
code/systems/: doubleintegrator.py  singleintegrator.py
data/: .gitignore
data/preprocessed_data/: batch_test_nn0_no6.npy  batch_test_nn1_no2.npy  batch_test_nn1_no3.npy  batch_test_nn1_no4.npy  batch_test_nn1_no5.npy  batch_test_nn1_no6.npy  batch_test_nn2_no1.npy  batch_test_nn2_no2.npy  batch_test_nn2_no3.npy  batch_test_nn2_no4.npy  batch_test_nn2_no5.npy  batch_test_nn2_no6.npy  batch_test_nn3_no0.npy  batch_test_nn3_no1.npy  batch_test_nn3_no2.npy  batch_test_nn3_no3.npy  batch_test_nn3_no4.npy  batch_test_nn3_no5.npy  batch_test_nn3_no6.npy  batch_test_nn4_no0.npy  batch_test_nn4_no1.npy  batch_test_nn4_no2.npy  batch_test_nn4_no3.npy  batch_test_nn4_no4.npy  batch_test_nn4_no5.npy  batch_test_nn4_no6.npy  batch_test_nn5_no0.npy  batch_test_nn5_no1.npy  batch_test_nn5_no2.npy  batch_test_nn5_no3.npy  batch_test_nn5_no4.npy  batch_test_nn5_no5.npy  batch_test_nn5_no6.npy  batch_test_nn6_no0.npy  batch_test_nn6_no1.npy  batch_test_nn6_no2.npy  batch_test_nn6_no3.npy  batch_test_nn6_no4.npy  batch_test_nn6_no5.npy  batch_test_nn6_no6.npy  (+45 more)
data/singleintegrator/: runAll.py  stats.py
data/singleintegrator/instances/: map_8by8_obst06_agents032_ex000000.yaml  map_8by8_obst06_agents032_ex000001.yaml  map_8by8_obst06_agents032_ex000002.yaml  map_8by8_obst06_agents032_ex000003.yaml  map_8by8_obst06_agents032_ex000004.yaml  map_8by8_obst06_agents032_ex000005.yaml  map_8by8_obst06_agents032_ex000006.yaml  map_8by8_obst06_agents032_ex000007.yaml  map_8by8_obst06_agents032_ex000008.yaml  map_8by8_obst06_agents032_ex000009.yaml  map_8by8_obst06_agents032_ex000010.yaml  map_8by8_obst06_agents032_ex000011.yaml  map_8by8_obst06_agents032_ex000012.yaml  map_8by8_obst06_agents032_ex000013.yaml  map_8by8_obst06_agents032_ex000014.yaml  map_8by8_obst06_agents032_ex000015.yaml  map_8by8_obst06_agents032_ex000016.yaml  map_8by8_obst06_agents032_ex000017.yaml  map_8by8_obst06_agents032_ex000018.yaml  map_8by8_obst06_agents032_ex000019.yaml  map_8by8_obst06_agents032_ex000020.yaml  map_8by8_obst06_agents032_ex000021.yaml  map_8by8_obst06_agents032_ex000022.yaml  map_8by8_obst06_agents032_ex000023.yaml  map_8by8_obst06_agents032_ex000024.yaml  map_8by8_obst06_agents032_ex000025.yaml  map_8by8_obst06_agents032_ex000026.yaml  map_8by8_obst06_agents032_ex000027.yaml  map_8by8_obst06_agents032_ex000028.yaml  map_8by8_obst06_agents032_ex000029.yaml  (+70 more)
models/doubleintegrator/: il_current.pt  il_current.pt.csv  il_current.pt.tar
models/singleintegrator/: il_current.pt  il_current.pt.csv
nn-export/: Makefile  gen.sh  main.c  nn.c  nn.h  nnexport.i  onnx_to_c_code.py  policy_vector_plot.py  test.py
results/: exp1.sh  exp2.sh
results/doubleintegrator/: exp1.py
results/singleintegrator/: animate.py  createPlots.py  dbscan.py  exp1.py  exp2.py  exp3.py  expbaseline.py  runAll.py  stats.py
utils/: plot_data.py
(+500 files in other folders)
